# Rust-owasp-top10

./: .dockerignore  .env.example  .gitignore  .semgrepignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PRODUCTION_TODO.md  PUBLIC_LAUNCH_TODO.md  README.md  ROADMAP.md  SECURITY.md  SENIOR_TODO.md  TODO.md  TODO_ADDITIONS.md  build.rs  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  dast.yml  release.yml  sbom.yml  secret_scanning.yml  semgrep.yml  sonar.yml
.semgrep/: config.yml
.sqlx/: query-5023a1cd69d4f1951a86ae01059251e52a640c182e7d0f1007ee115929bcd55d.json  query-a8d3066b225dbd24248a570f1a5c3787319a08d0bcf274724a4eff4b2d17708e.json
.zap/: rules.tsv
cloudflare/: tunnel-config.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  secrets.rs  secrets_aws.rs  secrets_doppler.rs  secrets_vault.rs  session.rs
crates/core/src/auth/: mod.rs  secure.rs  vulnerable.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: error_response.rs  lib.rs  main.rs  routes.rs  templates.rs
crates/web/src/extractors/: mod.rs
crates/web/src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
crates/web/src/middleware/: auth.rs  mod.rs  request_id.rs  role_guard.rs
crates/web/templates/: login.html
crates/web/tests/: secure_mode.rs  vulnerable_mode.rs
crates/web/tests/common/: mod.rs
docs/: akademik_degerlendirme.md  code_hygiene.md  community_governance.md  database_hardening.md  devsecops_deployment.md  disaster_recovery_gc.md  edge_protection.md  owasp-report.md  secrets_management.md  siem_monitoring.md  siem_observability.md  ssl_certificate_management.md  threat-model.md
docs/modules/: core.md  web.md
docs/references/: references.md
docs/research/: README.md  analiz_cift_mod.md  analiz_derleme_zamani.md  analiz_devsecops_siem.md  analiz_timing_attack.md  analiz_zero_disk.md
exploits/: 01_sqli_login_bypass.sh  02_sqli_union.sh  03_xss_reflected.html  04_xss_stored.sh  05_idor.sh  06_bruteforce.sh  07_csrf.html  08_integrity.sh  09_exception_dos.sh  README.md
migrations/: 0001_create_users.sql  0002_create_sessions.sql  0003_create_posts.sql
nginx/: Dockerfile  cloudflare-shield.conf  nginx.conf
scripts/: db-session-gc.sql  dr-drill.sh  rate_limit_test.js  renew-certificates.sh  scan-history-secrets.sh  setup-hooks.bat  setup-hooks.sh  stress-test.js
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  session.rs  templates.rs
src/auth/: mod.rs  secure.rs  vulnerable.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs  user_handlers.rs
templates/: base.html  profile.html  register.html  search.html
terraform/: certificates.tf  compute.tf  database.tf  iam.tf  main.tf  variables.tf
tests/: secure_mode.rs  vulnerable_mode.rs
tests/common/: mod.rs
vector/: vector.toml
