[workspace]
members = ["crates/core", "crates/web"]
resolver = "2"

[workspace.dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & Crypto
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace", "set-header"] }
tower_governor = "0.3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2.5"

# Templating
askama = "0.12"
askama_axum = "0.4"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error Handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
ammonia = "4"
dotenvy = "0.15"
