[workspace]
members = ["crates/core", "crates/web"]
resolver = "2"

[workspace.dependencies]
# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & Crypto
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# Web Framework
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit", "trace", "set-header", "request-id", "util", "cors"] }
tower_governor = "0.3"
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2.5"

# Templating
askama = "0.12"
askama_axum = "0.4"

# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error Handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
ammonia = "4"
dotenvy = "0.15"

# Cryptography & Security (Phase 4)
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hmac = "0.12"

# Async & Futures (Phase 5)
futures = "0.3"

# ==============================================================================
# 🏗️ HARDENED PRODUCTION RELEASE PROFILE
# ==============================================================================
[profile.release]
opt-level = 3             # Maximize execution speed & general compiler optimizations
lto = true                # Enable Link-Time Optimization (cross-crate dead-code elimination)
codegen-units = 1         # Restrict codegen units to 1 for maximum optimization & binary safety
panic = "abort"           # Abort on panics to minimize binary size & exploit/rewinding surface
strip = true              # Strip all debug symbols and symbols, preventing reverse engineering
