[package]
name = "owasp-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Domain core library — Rust OWASP Top 10 Security Lab (Sıfır HTTP Bağımlılığı)"

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }

# Cryptography (Phase 4)
hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }

# Cloud Secrets Provider Dependencies (feature-gated)
reqwest = { workspace = true, optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[features]
default = []
vault = ["dep:reqwest"]
aws = ["dep:aws-sdk-secretsmanager", "dep:aws-config"]
doppler = ["dep:reqwest"]
