[package]
name = "owasp-web"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "HTTP/Axum katmanı — Rust OWASP Top 10 Security Lab"

[dependencies]
# Workspace core
owasp-core = { path = "../core" }

# Web Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

# Templating
askama = { workspace = true }
askama_axum = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
ammonia = { workspace = true }
dotenvy = { workspace = true }

# Database (for AppState pool)
sqlx = { workspace = true }
